Improved responsive design and fixed layout bug on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -12,14 +12,9 @@
 
 :root {
   --blackolive: #313628;
-  --coolpurple: #5E0035;
   --beige: #E4E6C3;
-  --powderblue: #94B0DA;
-  --coolgray: #A09EBB;
-  --carolina-blue: #7eaac8ff;
   --coffee: #735240ff;
   --ebony: #51544dff;
-  --lapis-lazuli: #21567bff;
   --silver: #a8a5a4ff;
   --margin-auto: auto;
   --dark-af: #0A0908;
@@ -27,6 +22,7 @@
   --cool-yellow: #f9d423;
   --navy: #023047;
   --not-so-white: #f8f9fa;
+  --dark-gray: #2b2b2b;
 
 }
 
@@ -206,12 +202,12 @@ dialog {
 }
 
 .custom-popup .leaflet-popup-content-wrapper {
-  background-color: #2b2b2b; /* Dark background color */
-  color: #f0f0f0; /* Light text for contrast */
-  border-radius: 10px; /* Rounded corners */
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5); /* Soft shadow for depth */
-  padding: 10px; /* Space around the content */
-  border: 3px solid var(--cool-yellow); /* Border to define the popup */
+  background-color: var(--dark-gray);
+  color: #f0f0f0;
+  border-radius: 10px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  border: 3px solid var(--cool-yellow); 
 }
 
 .marker-popup button {
@@ -835,7 +831,6 @@ body.light {
   background-repeat: no-repeat;
   margin: auto;
   animation: bounce 1s ease-in-out infinite;
-  animation-delay: 1;
 }
 
 .logout-buttons {
